NetBSD Problem Report #50631

From www@NetBSD.org  Thu Jan  7 21:55:08 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 048EC7ABFC
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  7 Jan 2016 21:55:08 +0000 (UTC)
Message-Id: <20160107215506.DF4EA7ACCC@mollari.NetBSD.org>
Date: Thu,  7 Jan 2016 21:55:06 +0000 (UTC)
From: joerg@NetBSD.org
Reply-To: joerg@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: RUMP uses inconsistent definitions for rump_sys_socket
X-Send-Pr-Version: www-1.0

>Number:         50631
>Category:       lib
>Synopsis:       RUMP uses inconsistent definitions for rump_sys_socket
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    joerg
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Jan 07 22:00:00 +0000 2016
>Closed-Date:    Fri Sep 30 07:43:34 +0000 2016
>Last-Modified:  Fri Sep 30 07:43:34 +0000 2016
>Originator:     Joerg Sonnenberger
>Release:        current
>Organization:
TNF
>Environment:
n/a
>Description:
rump/rump_syscalls.h defines rump_sys_socket with assembler name RUMP_SYS_RENAME_SOCKET, which gets expanded to rump___sysimpl_socket30.
sys/socket.h on the other hand defines rump_sys_socket with assembler name __socket30.
>How-To-Repeat:
Build e.g. src/tests/fs/common/fstest_ext2fs.c with a compiler that enforces consistent assembler names.
>Fix:
Define consistent assembler names.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: lib-bug-people->pooka
Responsible-Changed-By: joerg@NetBSD.org
Responsible-Changed-When: Mon, 25 Jan 2016 11:27:50 +0000
Responsible-Changed-Why:
Assign to rump folks.


Responsible-Changed-From-To: pooka->joerg
Responsible-Changed-By: pooka@NetBSD.org
Responsible-Changed-When: Fri, 29 Jan 2016 18:47:01 +0000
Responsible-Changed-Why:
provide actual details.  sys/socket.h does not define rump_sys_socket.
thanks.


From: christos@zoulas.com (Christos Zoulas)
To: gnats-bugs@NetBSD.org, joerg@NetBSD.org, pooka@NetBSD.org, 
	netbsd-bugs@netbsd.org, gnats-admin@netbsd.org
Cc: 
Subject: Re: lib/50631 (RUMP uses inconsistent definitions for rump_sys_socket)
Date: Fri, 29 Jan 2016 14:10:33 -0500

 On Jan 29,  6:47pm, pooka@NetBSD.org (pooka@NetBSD.org) wrote:
 -- Subject: Re: lib/50631 (RUMP uses inconsistent definitions for rump_sys_so

 | Synopsis: RUMP uses inconsistent definitions for rump_sys_socket
 | 
 | Responsible-Changed-From-To: pooka->joerg
 | Responsible-Changed-By: pooka@NetBSD.org
 | Responsible-Changed-When: Fri, 29 Jan 2016 18:47:01 +0000
 | Responsible-Changed-Why:
 | provide actual details.  sys/socket.h does not define rump_sys_socket.
 | thanks.

 Well, it is simple enough to compile with cpp the file joerg mentioned and
 see that it is broken since rump_syscalls_compat includes <sys/socket.h>
 after it redefines socket in rump.h...

 I have a fix with in http://www.netbsd.org/~christos/rump.h.diff

 christos

From: Antti Kantee <pooka@NetBSD.org>
To: Christos Zoulas <christos@zoulas.com>, gnats-bugs@NetBSD.org,
 joerg@NetBSD.org, netbsd-bugs@netbsd.org, gnats-admin@netbsd.org
Cc: 
Subject: Re: lib/50631 (RUMP uses inconsistent definitions for
 rump_sys_socket)
Date: Fri, 29 Jan 2016 19:32:39 +0000

 On 29/01/16 19:10, Christos Zoulas wrote:
 > I have a fix with in http://www.netbsd.org/~christos/rump.h.diff

 Fine by me.  Thank you for the constructive contribution (as usual).

From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50631 CVS commit: src/sys/rump/include/rump
Date: Fri, 29 Jan 2016 15:35:48 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Fri Jan 29 20:35:48 UTC 2016

 Modified Files:
 	src/sys/rump/include/rump: rump.h

 Log Message:
 PR/50631: Joerg Sonnenberger: Don't rename syscalls before you include
 the relevant headers.


 To generate a diff of this commit:
 cvs rdiff -u -r1.66 -r1.67 src/sys/rump/include/rump/rump.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 14 Mar 2016 05:27:04 +0000
State-Changed-Why:
is this fixed after christos's commit?


State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Fri, 30 Sep 2016 07:43:34 +0000
State-Changed-Why:
feedback timeout


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.