PR/50631: Joerg Sonnenberger: Don't rename syscalls before you include the relevant headers.